--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@shopify/shopify-app-session-storage-prisma": "^4.0.5",
     "axios": "^1.6.8",
     "isbot": "^5.1.0",
+    "papaparse": "^5.4.1",
     "prisma": "^5.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
