--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -3,7 +3,7 @@
 client_id = "f4d6b8ad1cdc40ba5ad2f445ad6594f0"
 name = "ai-caller"
 handle = "ai-caller"
-application_url = "https://consistency-sport-math-repair.trycloudflare.com"
+application_url = "https://skating-indicate-helen-sony.trycloudflare.com"
 embedded = true
 
 [build]
@@ -13,13 +13,13 @@ include_config_on_deploy = true
 
 [access_scopes]
 # Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
-scopes = "write_products"
+scopes = "write_products read_customers read_inventory"
 
 [auth]
 redirect_urls = [
-  "https://consistency-sport-math-repair.trycloudflare.com/auth/callback",
-  "https://consistency-sport-math-repair.trycloudflare.com/auth/shopify/callback",
-  "https://consistency-sport-math-repair.trycloudflare.com/api/auth/callback"
+  "https://skating-indicate-helen-sony.trycloudflare.com/auth/callback",
+  "https://skating-indicate-helen-sony.trycloudflare.com/auth/shopify/callback",
+  "https://skating-indicate-helen-sony.trycloudflare.com/api/auth/callback"
 ]
 
 [webhooks]
